myOrderManagement/force-app/main/default/objects/OrderItem__c/fields/Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>Order_Reference__c</fullName>
    <label>Order Reference</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>OrderItems</relationshipLabel>
    <relationshipName>OrderItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>