myOrderManagement/force-app/main/default/objects/OrderItem__c/fields/Product_Reference__c.field-meta.xml
<CustomField>
    <fullName>Product_Reference__c</fullName>
    <label>Product_Reference</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>OrderItems</relationshipLabel>
    <relationshipName>OrderItems</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>